<?xml version="1.0"?>
<package format="2">
  <name>odometry_converter</name>
  <version>1.0.0</version>
  <description>conversion from pose to odom msg</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="yipu.zhao@gatech.edu">Yipu</maintainer>
  <author>Yipu Zhao</author>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <depend>message_filters</depend>

</package>



